# 05_df_agents

./: .gitignore  README.md  how-to.md  report.md
agent_researcher/: Dockerfile  README.md  pyproject.toml  requirements.txt
agent_researcher/src/agent_researcher/: crew.py  main.py
df_agents/: README.md  docker-compose.prod.yml  docker-compose.yml  nginx.conf  pyproject.toml  requirements.txt
df_agents/database/: 01_check_db_connection.py  02_create_db_tables.py  03_seed_db.py  04_check_agents_table_content.py  add_or_update_agent_in_db.py  check_reports_table_content.py  drop_all_tables.py  list_db_and_tables.py
df_agents/src/agent_researcher/: main.py
df_agents/src/agents/: crew.py  crew_company_research.py  crew_competitors_research.py  db_utils.py  flow_competitor_research.py  flow_onboarding_emails.py  flow_test.py  flow_test2.py  main.py
df_agents/src/agents/config/: agents.yaml  tasks.yaml
df_agents/src/agents/crews/crew_company_overview/: crew_company_overview.py
df_agents/src/agents/crews/crew_company_overview/config/: agents.yaml  tasks.yaml
df_agents/src/agents/crews/crew_company_target_industries/: crew_company_target_industries.py
df_agents/src/agents/crews/crew_company_target_industries/config/: agents.yaml  tasks.yaml
df_agents/src/agents/crews/crew_competitor_research/: crew_competitors_research.py
df_agents/src/agents/crews/crew_competitor_research/config/: agents.yaml  tasks.yaml
df_agents/src/agents/crews/crew_user_onboarding_emails/: crew_user_onboarding_emails.py
df_agents/src/agents/crews/crew_welcomer/: crew_welcomer.py
(+4 files in other folders)
