[tool.poetry]
name = "agents"
version = "0.1.0"
description = "agents using crewAI"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = { extras = ["tools"], version = ">=0.67.1,<1.0.0" }


[tool.poetry.scripts]
agents = "agents.main:run"
run_crew = "agents.main:run"
train = "agents.main:train"
replay = "agents.main:replay"
test = "agents.main:test"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
